--- a/app/background.html
+++ b/app/background.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+	<!-- services -->
+	<script src="js/services/exampleService.js"></script>
+
+	<!-- vendor -->
+	<script src="js/serviceMap.js"></script>
 	<script src="js/background.js"></script>
 </head>
 </html>
